# untitled_editor

./: .gitignore  CMakeLists.txt  README.md  untitledEditor.hpp
interfaces/: compositorInterface.hpp  interfaceMacro.hpp
modules/defaultCompositor/: CMakeLists.txt  module.hpp
modules/defaultCompositor/src/: compositor.cpp  compositor.hpp  module.cpp  window.cpp  window.hpp  windowFactory.cpp  windowFactory.hpp
src/: definitions.hpp  main.cpp  options.hpp  settings.hpp
src/errors/: errors.cpp  errors.hpp
src/misc/: vec2.tpp
src/moduleManager/: module.cpp  module.hpp  moduleManager.hpp  moduleManager.tpp
src/startup/: startup.cpp  startup.hpp
src/taskManager/: task.cpp  task.hpp  taskManager.cpp  taskManager.hpp  taskRunner.cpp  taskRunner.hpp
tracking/: TrackBuild.py
